--- a/sextant/package.json
+++ b/sextant/package.json
@@ -2,6 +2,7 @@
   "name": "sextant",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
